--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings_basic">Основнi</string>
+    <string name="settings_arabictext">Арабський текст</string>
+    <string name="settings_texttransfer">Текст перекладу</string>
+    <string name="settings_textsize">Розмiр тексту</string>
 </resources>
