--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="settings_arabictext">Арабський текст</string>
     <string name="settings_texttransfer">Текст перекладу</string>
     <string name="settings_textsize">Розмiр тексту</string>
+    <string name="settings_textsizeview">Iмям Аллага Милостивого Милосердного</string>
 </resources>
