--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="settings_arabictext">Арабський текст</string>
     <string name="settings_texttransfer">Текст перекладу</string>
     <string name="settings_textsize">Розмiр тексту</string>
+    <string name="aboush1">QURAN UA</string>
+    <string name="aboutus">Переклад смислів Корану українською мовою виконано кандидатом історичних наук, українським релігієзнавцем Михайлом Якубовичем безпосередньо з арабської мови й з урахуванням традиційних мусульманських тлумачень. Перше видання перекладу вийшло 2013 року в Центрі імені Короля Фагда з видання Священного Корану (Медина, Саудівська Аравія), далі видавалося в Києві, Стамбулі, Анкарі, в тому числі за погодженням Управління в справах релігій Туреччини. На сьогодні праця залишається єдиним повним перекладом смислів Корану українською мовою з оригіналу. Додаток QuranUA випущено за сприяння Асоціації мусульман України.</string>
     <string name="settings_textsizeview">Iмям Аллага Милостивого Милосердного</string>
 </resources>
